crates/seatbelt/src/chaos/latency/snapshots/seatbelt__chaos__latency__layer__tests__config_applies_all_settings.snap
---
source: crates/seatbelt/src/chaos/latency/layer.rs
expression: layer
---
LatencyLayer {
    context: ResilienceContext {
        clock: Clock {
            kind: "controlled",
            timers: 0,
            alive: true,
            ..
        },
        name: "test_pipeline",
        meter: None,
        logs_enabled: false,
        _in: PhantomData<fn() -> alloc::string::String>,
        _out: PhantomData<fn() -> alloc::string::String>,
    },
    rate: Some(
        LatencyRate,
    ),
    latency_duration: Some(
        LatencyDuration,
    ),
    enable_if: Disabled,
    telemetry: TelemetryHelper {
        pipeline_name: "test_pipeline",
        strategy_name: "test",
        event_reporter: None,
        logs_enabled: false,
    },
    rnd: Real,
    _state: PhantomData<fn(alloc::string::String, seatbelt::typestates::Set, seatbelt::typestates::Set) -> alloc::string::String>,
}
